narrowband.tex fix-up

--- a/common/com_channel.tex
+++ b/common/com_channel.tex
@@ -159,13 +159,10 @@ These processes include:
 %======================================
 \subsection{Receive operator}
 %======================================
-Let $\opI$ be the \hie{identity operator}.\footnote{
-  $\opI$ is the \hie{identity operator} if for any operator $\opX$,
-  $\opX\opI = \opI\opX = \opX.$
-  }
+Let $\opI$ be the \ope{identity operator} \xref{def:opI}.
 Ideally, $\opR$ is selected such that
    $\opR\opC\opT = \opI$.
-In this case we say that $\opR$ is the \hie{left inverse}\footnote{
+In this case we say that $\opR$ is the \ope{left inverse}\footnote{
   \begin{tabular}[t]{llll}
     $\opXi{X}$ is the & \hie{left  inverse}& of $\opX$ if & $\opXi{X}\opX=\opI$. \\
     $\opXi{X}$ is the & \hie{right inverse}& of $\opX$ if & $\opX\opXi{X}=\opI$. \\
@@ -185,8 +182,8 @@ optimum
     \item and sometimes under some structural \hie{constraint}.
   \end{enume}
 When a structural constraint is imposed on $\opR$,
-the solution is called \hie{structured}; otherwise,
-it is called \hie{non-structured}.\footnote{\citerpg{vantrees1}{12}{0471095176}}
+the solution is called \prope{structured}; otherwise,
+it is called \prope{non-structured}.\footnote{\citerpg{vantrees1}{12}{0471095176}}
 A common example of a structured approach is the use of a
 transversal filter (FIR filter in DSP) in which optimal coefficients
 are found for the filter.
@@ -451,20 +448,20 @@ $\setn{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N}$
 is sufficient for the receiver to make an optimal decision as to
 which value the transmitter sent.
 
-%---------------------------------------
-\begin{definition}
-\label{def:chan_stats}
-\index{channel statistics}
-%---------------------------------------
-Let $\opC$ be an additive noise channel
-%such that $\fr(t)=[\opC\fs](t)=\fs(t)+\fn(t)$
-%and $\set{\fpsi_n}{n=1,2,\ldots,N}$ be a basis for $\fs(t)$.
-%\defbox{\begin{array}{lll}
-%  \fdotr_n    &\eqd& \inprod{\fr(t)}  {\psi_n(t)}  \\
-  %\fdots_n(u) &\eqd& \inprod{\fs(t;u)}{\psi_n(t)} \\
-%  \fdotn_n    &\eqd& \inprod{\fn(t)}  {\psi_n(t)}
-%\end{array}}
-\end{definition}
+%%---------------------------------------
+%\begin{definition}
+%\label{def:chan_stats}
+%\index{channel statistics}
+%%---------------------------------------
+%Let $\opC$ be an additive noise channel
+%%such that $\fr(t)=[\opC\fs](t)=\fs(t)+\fn(t)$
+%%and $\set{\fpsi_n}{n=1,2,\ldots,N}$ be a basis for $\fs(t)$.
+%%\defbox{\begin{array}{lll}
+%%  \fdotr_n    &\eqd& \inprod{\fr(t)}  {\psi_n(t)}  \\
+%  %\fdots_n(u) &\eqd& \inprod{\fs(t;u)}{\psi_n(t)} \\
+%%  \fdotn_n    &\eqd& \inprod{\fn(t)}  {\psi_n(t)}
+%%\end{array}}
+%\end{definition}
 
 
 
