--- a/common/narrowband.tex
+++ b/common/narrowband.tex
@@ -2,343 +2,6 @@
 % LaTeX File
 % Daniel Greenhoe
 %============================================================================
-
-%======================================
-%20190903%\chapter{Communications Systems}
-%20190903%\index{communication systems}
-%20190903%\label{chp:comsys}
-%======================================
-%20190903 com_channel%%======================================
-%20190903 com_channel%\section{System model}
-%20190903 com_channel%%======================================
-%20190903 com_channel%\begin{figure}[ht] \color{figcolor}
-%20190903 com_channel%\begin{center}
-%20190903 com_channel%\begin{fsL}
-%20190903 com_channel%\setlength{\unitlength}{0.20mm}
-%20190903 com_channel%\begin{picture}(700,150)(-100,-50)
-%20190903 com_channel%  \thinlines
-%20190903 com_channel%  %\graphpaper[10](0,0)(500,100)
-%20190903 com_channel%  \put(-100 ,  60 ){\makebox( 100,0)[b]{$\su$} }
-%20190903 com_channel%  \put(-100 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[t]{transmit} }
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[b]{$\opT$} }
-%20190903 com_channel%  \put(  00 ,  00 ){\framebox( 100,100){} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 100 ,  60 ){\makebox( 100,0)[b]{$s(t;\vu)$} }
-%20190903 com_channel%  \put( 100 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[t]{channel} }
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[b]{$\opC$} }
-%20190903 com_channel%  \put( 200 ,  00 ){\framebox(100,100){} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 300 ,  60 ){\makebox( 100,0)[b]{$r(t;\vu)$} }
-%20190903 com_channel%  \put( 300 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 400 ,  00 ){\framebox(100,100){} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[t]{receive} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[b]{$\opR$} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 500 ,  60 ){\makebox( 100,0)[b]{$\sue$} }
-%20190903 com_channel%  \put( 500 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put(- 90 , -10 ){\makebox( 0, 0)[tl]{$\vu\eqd\su$} }
-%20190903 com_channel%  \put( 110 , -10 ){\makebox( 0, 0)[tl]{$s(t;\vu)=\opT\vu$} }
-%20190903 com_channel%  \put( 310 , -10 ){\makebox( 0, 0)[tl]{$r(t;\vu)=\opC\opT\vu$} }
-%20190903 com_channel%  \put( 510 , -10 ){\makebox( 0, 0)[tl]{$\sue=\opSys\vu=\opR\opC\opT\vu$} }
-%20190903 com_channel%
-%20190903 com_channel%\end{picture}
-%20190903 com_channel%\end{fsL}
-%20190903 com_channel%\end{center}
-%20190903 com_channel%\caption{
-%20190903 com_channel%   Communication system model
-%20190903 com_channel%   \label{fig:sys_model}
-%20190903 com_channel%   }
-%20190903 com_channel%\end{figure}
-%20190903 com_channel%
-%20190903 com_channel%A communication system is an operator $\opSys$ over an 
-%20190903 com_channel%information sequence $\su$ that generates an
-%20190903 com_channel%estimated information sequence $\sue$.
-%20190903 com_channel%The system operator factors into a
-%20190903 com_channel%receive operator $\opR$, a channel operator $\opC$, and
-%20190903 com_channel%a transmit operator $\opT$ such that
-%20190903 com_channel%   \[ \opSys = \opR\opC\opT. \]
-%20190903 com_channel%The transmit operator
-%20190903 com_channel%operates on an information sequence $\su$ to generate
-%20190903 com_channel%a channel signal $\fs(t;\vu)$.
-%20190903 com_channel%The channel operator operates on the transmitted signal $\fs(t;\vu)$
-%20190903 com_channel%to generate the received signal $\fr(t;\vu)$.
-%20190903 com_channel%The receive operator operates on the received signal $\fr(t;\vu)$
-%20190903 com_channel%to generate the estimate $\sue$
-%20190903 com_channel%(see \prefpp{fig:sys_model}).
-%20190903 com_channel%
-%20190903 com_channel%
-%20190903 com_channel%%---------------------------------------
-%20190903 com_channel%\begin{definition}
-%20190903 com_channel%\label{def:comsys}
-%20190903 com_channel%\index{communication system}
-%20190903 com_channel%%---------------------------------------
-%20190903 com_channel%Let $U$ be the set of all sequences $\su$ and let
-%20190903 com_channel%\defbox{
-%20190903 com_channel%\begin{array}{lllll}
-%20190903 com_channel%   \bullet & \opSys &:U    &\to U    & \text{ (system   operator)  } \\
-%20190903 com_channel%   \bullet & \opT   &:U    &\to \vRc & \text{ (transmit operator)} \\
-%20190903 com_channel%   \bullet & \opC   &:\vRc &\to \vRc & \text{ (channel  operator) } \\
-%20190903 com_channel%   \bullet & \opR   &:\vRc &\to U    & \text{ (receive  operator) }
-%20190903 com_channel%\end{array}
-%20190903 com_channel%}
-%20190903 com_channel%be operators.
-%20190903 com_channel%A {\bf digital communication system} is the operation $\opSys$
-%20190903 com_channel%on the set of information sequences $U$ such that
-%20190903 com_channel%\[ \opSys \eqd \opR\opC\opT.\]
-%20190903 com_channel%\end{definition}
-%20190903 com_channel%
-%20190903 com_channel%Communication systems can be continuous or discrete valued in
-%20190903 com_channel%time and/or amplitude:
-%20190903 com_channel%
-%20190903 com_channel%\begin{center}
-%20190903 com_channel%   \begin{tabular}{|c||c|c|}
-%20190903 com_channel%      \hline
-%20190903 com_channel%         $\fs(t)=a(t)\psi(t)$   &  continuous time $t$      & discrete time $t$   \\
-%20190903 com_channel%      \hline
-%20190903 com_channel%      \hline
-%20190903 com_channel%         continuous amplitude $a(t)$ & analog communications   & discrete-time communications  \\
-%20190903 com_channel%      \hline
-%20190903 com_channel%         discrete amplitude $a(t)$   & ---                     & digital communications \\
-%20190903 com_channel%      \hline
-%20190903 com_channel%   \end{tabular}
-%20190903 com_channel%\end{center}
-%20190903 com_channel%
-%20190903 com_channel%{\bf In this document, we normally take the approach that}
-%20190903 com_channel%\begin{enume}
-%20190903 com_channel%   \item $\opC$ is stochastic
-%20190903 com_channel%         \footnote{
-%20190903 com_channel%         An exception to this is
-%20190903 com_channel%         in Chapter~\ref{chp:isi} (ISI) \prefpo{chp:isi},
-%20190903 com_channel%         where $\opC$ is deterministic
-%20190903 com_channel%         ($\opC$ is simply a bandlimiting operation).
-%20190903 com_channel%         However in any real-world system, $\opC$ is always stochastic.
-%20190903 com_channel%         }
-%20190903 com_channel%   \item There is no structural constraint on $\opR$.
-%20190903 com_channel%   \item $\opR$ is optimum with respect to the ML-criterion.
-%20190903 com_channel%\end{enume}
-%20190903 com_channel%These characteristics are explained more fully below.
-%20190903 com_channel%
-%20190903 com_channel%%======================================
-%20190903 com_channel%\subsection{Channel operator}
-%20190903 com_channel%%======================================
-%20190903 com_channel%Real-world physical channels perform a number of operations on
-%20190903 com_channel%a signal.
-%20190903 com_channel%Often these operations are closely modeled by a channel
-%20190903 com_channel%operator $\opC$.
-%20190903 com_channel%Properties that characterize a particular
-%20190903 com_channel%channel operator associated with some physical channel include
-%20190903 com_channel%\begin{liste}
-%20190903 com_channel%   \item linear or non-linear
-%20190903 com_channel%   \item time-invariant or time-variant
-%20190903 com_channel%   \item memoryless or non-memoryless
-%20190903 com_channel%   \item deterministic or stochastic.
-%20190903 com_channel%\end{liste}
-%20190903 com_channel%Examples of physical channels include
-%20190903 com_channel%free space, air, water, soil, copper wire, and fiber optic cable.
-%20190903 com_channel%Information is carried through a channel using some physical process.
-%20190903 com_channel%These processes include:
-%20190903 com_channel%
-%20190903 com_channel%\begin{tabular}{cl|ll}
-%20190903 com_channel%             & Process          & Example             \\
-%20190903 com_channel%   \hline
-%20190903 com_channel%   $\bullet$ & electromagnetic waves & free space, air    & (see Appendix~\ref{app:em}, \prefpo{app:em})  \\
-%20190903 com_channel%   $\bullet$ & acoustic waves        & water, soil         \\
-%20190903 com_channel%   $\bullet$ & electric field potential (voltage)  & wire                \\
-%20190903 com_channel%   $\bullet$ & light            & fiber optic cable   \\
-%20190903 com_channel%   $\bullet$ & quantum mechanics         &
-%20190903 com_channel%\end{tabular}
-%20190903 com_channel%
-%20190903 com_channel%
-%20190903 com_channel%%======================================
-%20190903 com_channel%\subsection{Receive operator}
-%20190903 com_channel%%======================================
-%20190903 com_channel%Let $\opI$ be the \hie{identity operator}.\footnote{
-%20190903 com_channel%  $\opI$ is the {\em identity operator} if for any operator $\opX$,
-%20190903 com_channel%  $\opX\opI = \opI\opX = \opX.$
-%20190903 com_channel%  }
-%20190903 com_channel%Ideally, $\opR$ is selected such that
-%20190903 com_channel%   \[ \opR\opC\opT = \opI. \]
-%20190903 com_channel%In this case we say that $\opR$ is the {\em left inverse}\footnote{
-%20190903 com_channel%  \begin{tabular}[t]{llll}
-%20190903 com_channel%    $\opXi{X}$ is the & {\em left  inverse}& of $\opX$ if & $\opXi{X}\opX=\opI$. \\
-%20190903 com_channel%    $\opXi{X}$ is the & {\em right inverse}& of $\opX$ if & $\opX\opXi{X}=\opI$. \\
-%20190903 com_channel%    $\opXi{X}$ is the & {\em       inverse}& of $\opX$ if & $\opXi{X}\opX=\opX\opXi{X}=\opI$.
-%20190903 com_channel%  \end{tabular}
-%20190903 com_channel%   }
-%20190903 com_channel%of $\opC\opT$ and denote this left inverse by $\opCTi$.
-%20190903 com_channel%One example of a system where this inverse exists is the
-%20190903 com_channel%noiseless ISI system (Chapter~\ref{chp:isi} \prefpo{chp:isi}).
-%20190903 com_channel%While this is quite useful for mathematical analysis and system design,
-%20190903 com_channel%$\opCTi$ does not actually exist for any real-world system.
-%20190903 com_channel%
-%20190903 com_channel%When $\opCTi$ does not exist, the ``ideal" $\opR$ is one that is
-%20190903 com_channel%optimum
-%20190903 com_channel%  \begin{enume}
-%20190903 com_channel%    \item with respect to some {\em criterion} (or cost function)
-%20190903 com_channel%    \item and sometimes under some structural {\em constraint}.
-%20190903 com_channel%  \end{enume}
-%20190903 com_channel%When a structural constraint is imposed on $\opR$,
-%20190903 com_channel%the solution is called {\em structured}; otherwise,
-%20190903 com_channel%it is called {\em non-structured}.\citep{vantrees1}{12}
-%20190903 com_channel%A common example of a structured approach is the use of a
-%20190903 com_channel%transversal filter (FIR filter in DSP) in which optimal coefficients
-%20190903 com_channel%are found for the filter.
-%20190903 com_channel%A structured $\opR$ is only optimal with respect to the
-%20190903 com_channel%imposed constraint.
-%20190903 com_channel%Even though $\opR$ may be optimal with respect to this structure,
-%20190903 com_channel%$\opR$ may not be optimal in general;
-%20190903 com_channel%that is, there may be another structure that would lead to a ``better"
-%20190903 com_channel%solution.
-%20190903 com_channel%In a non-structured approach, $\opR$ is free to take any form
-%20190903 com_channel%whatsoever (practical or impractical) and therefore leads to the
-%20190903 com_channel%best of the best solutions.
-%20190903 com_channel%
-%20190903 com_channel%The nature of $\opR$ depends heavily on the nature of $\opC$.
-%20190903 com_channel%If $\opCTi$ does not exist,
-%20190903 com_channel%then the ideal $\opR$ is one that is optimal with respect to some criterion.
-%20190903 com_channel%If $\opC$ is deterministic,
-%20190903 com_channel%then appropriate optimization criterion may include
-%20190903 com_channel%\begin{liste}
-%20190903 com_channel%   \item least square error (LSE) criterion
-%20190903 com_channel%   \item minimum absolute error criterion
-%20190903 com_channel%   \item minimum peak distortion criterion.
-%20190903 com_channel%\end{liste}
-%20190903 com_channel%If $\opC$ is stochastic\footnote{
-%20190903 com_channel%  An example of a stochastic $\opC$ includes the additive noise channel
-%20190903 com_channel%  operator $\opCan$ and the AWGN channel operator $\opCawgn$
-%20190903 com_channel%  (Chapter~\ref{chp:awgn} \prefpo{chp:awgn})
-%20190903 com_channel%  }
-%20190903 com_channel%then appropriate optimization criterion may include\footnote{
-%20190903 com_channel%  {\em Estimation}: Appendix~\ref{app:est} \prefpo{app:est}
-%20190903 com_channel%  }
-%20190903 com_channel%
-%20190903 com_channel%\begin{tabular}{llll}
-%20190903 com_channel%   $\bullet$ & Bayes:                                  & pdf known and cost function defined \\
-%20190903 com_channel%   $\bullet$ & Maximum aposteriori probability (MAP):  & pdf known and uniform cost function \\
-%20190903 com_channel%   $\bullet$ & Maximum likelihood (ML):                & pdf known and no prior probability information\\
-%20190903 com_channel%   $\bullet$ & mini-max:                               & pdf not known but a cost function is defined \\
-%20190903 com_channel%   $\bullet$ & Neyman-Pearson:                         & pdf not known and no cost function defined.
-%20190903 com_channel%\end{tabular}
-%20190903 com_channel%
-%20190903 com_channel%Making $\opR$ optimum with respect to one of these criterion leads to
-%20190903 com_channel%an {\em estimate} $\sue = \opR\opC\opT\vu$ that is also optimum
-%20190903 com_channel%with respect to the same criterion.\footnote{
-%20190903 com_channel%   {\em Optimal estimates}:
-%20190903 com_channel%   \prefpp{def:ML} \prefpo{def:ML}
-%20190903 com_channel%   }
-%20190903 com_channel%\[
-%20190903 com_channel%\begin{array}{llcl}
-%20190903 com_channel%   \text{Bayesian:}                               & \estB   &\eqd& \ds \arg\min_{\theta} C(\theta,\pdfp(s,r)) \\
-%20190903 com_channel%   \text{Mean square (MS):}                       & \estMS  &\eqd& \ds \arg\min_{\theta} \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
-%20190903 com_channel%   \text{mini-max (MM):}                          & \estMM  &\eqd& \ds \arg\min_{\theta}\max_{\pdfp} C(\theta,\pdfp(s,r)) \\
-%20190903 com_channel%   \text{maximum a-posteriori probability (MAP):} & \estMAP &\eqd& \ds \arg\max_{\theta} \pP{s(t;\theta)|\fr(t)} \\
-%20190903 com_channel%   \text{maximum likelihood (ML):}                & \estML  &\eqd& \ds \arg\max_{\theta} \pP{\fr(t)|s(t;\theta)} \\
-%20190903 com_channel%\end{array}
-%20190903 com_channel%\]
-%20190903 com_channel%
-%20190903 com_channel%%======================================
-%20190903 com_channel%\section{Optimization in the case of additional operations}
-%20190903 com_channel%%======================================
-%20190903 com_channel%\begin{figure}[ht] \color{figcolor}
-%20190903 com_channel%\begin{center}
-%20190903 com_channel%\begin{fsL}
-%20190903 com_channel%\setlength{\unitlength}{0.15mm}
-%20190903 com_channel%\begin{picture}(900,150)(-100,-50)
-%20190903 com_channel%  \thinlines
-%20190903 com_channel%  %\graphpaper[10](0,0)(500,100)
-%20190903 com_channel%  \put(-100 ,  60 ){\makebox( 100,0)[b]{$\su$} }
-%20190903 com_channel%  \put(-100 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[t]{transmit} }
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put(  00 ,  10 ){\makebox( 100, 80)[b]{$\opT$} }
-%20190903 com_channel%  \put(  00 ,  00 ){\framebox( 100,100){} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 100 ,  60 ){\makebox( 100,0)[b]{$s(t;\vu)$} }
-%20190903 com_channel%  \put( 100 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[t]{channel} }
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put( 200 ,  10 ){\makebox( 100, 80)[b]{$\opC$} }
-%20190903 com_channel%  \put( 200 ,  00 ){\framebox(100,100){} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 300 ,  60 ){\makebox( 100,0)[b]{$r(t;\vu)$} }
-%20190903 com_channel%  \put( 300 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 400 ,  00 ){\framebox(100,100){} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[t]{} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put( 400 ,  10 ){\makebox( 100, 80)[b]{$\opX$} }
-%20190903 com_channel%
-%20190903 com_channel% %\put( 500 ,  60 ){\makebox( 100,0)[b]{$\sue$} }
-%20190903 com_channel%  \put( 500 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 600 ,  00 ){\framebox(100,100){} }
-%20190903 com_channel%  \put( 600 ,  10 ){\makebox( 100, 80)[t]{receive} }
-%20190903 com_channel%  \put( 600 ,  10 ){\makebox( 100, 80)[c]{operation} }
-%20190903 com_channel%  \put( 600 ,  10 ){\makebox( 100, 80)[b]{$\opR$} }
-%20190903 com_channel%
-%20190903 com_channel%  \put( 700 ,  60 ){\makebox( 100,0)[b]{$\sue$} }
-%20190903 com_channel%  \put( 700 ,  50 ){\vector(1,0){100} }
-%20190903 com_channel%
-%20190903 com_channel%  \put(- 90 , -10 ){\makebox( 0, 0)[tl]{$\vu\eqd\su$} }
-%20190903 com_channel%  \put( 110 , -10 ){\makebox( 0, 0)[tl]{$s(t;\vu)=\opT\vu$} }
-%20190903 com_channel%  \put( 310 , -10 ){\makebox( 0, 0)[tl]{$r(t;\vu)=\opC\opT\vu$} }
-%20190903 com_channel%  \put( 510 , -10 ){\makebox( 0, 0)[tl]{$\opX\opC\opT\vu$} }
-%20190903 com_channel%  \put( 710 , -10 ){\makebox( 0, 0)[tl]{$\sue=\opR\opX\opC\opT\vu$} }
-%20190903 com_channel%
-%20190903 com_channel%\end{picture}
-%20190903 com_channel%\end{fsL}
-%20190903 com_channel%\end{center}
-%20190903 com_channel%\caption{
-%20190903 com_channel%   Theorem of reversibility
-%20190903 com_channel%   \label{fig:thm_rev}
-%20190903 com_channel%   }
-%20190903 com_channel%\end{figure}
-%20190903 com_channel%
-%20190903 com_channel%Often in communication systems, an additional  operator $\opX$ is
-%20190903 com_channel%inserted such that (see \prefpp{fig:thm_rev})
-%20190903 com_channel%   \[ \opSys = \opR\opX\opC\opT.\]
-%20190903 com_channel%An example of such an operator $\opX$ is a receive filter.
-%20190903 com_channel%Is it still possible to find an $\opR$ that will perform as well as
-%20190903 com_channel%the case where $\opX$ is not inserted?
-%20190903 com_channel%In general, the answer is ``no".
-%20190903 com_channel%For example, if $\opX r=0$, then all received information is lost
-%20190903 com_channel%and obviously there is no $\opR$ that can recover from this event.
-%20190903 com_channel%However, in the case where the right inverse $\opXi{X}$ of $\opX$ exists,
-%20190903 com_channel%then the answer to the question is ``yes" and an optimum  $\opR$
-%20190903 com_channel%still exists.
-%20190903 com_channel%That is, it doesn't matter if an $\opX$ is inserted into system
-%20190903 com_channel%as long as $\opX$ is invertible.
-%20190903 com_channel%This is stated formally in the next theorem.
-%20190903 com_channel%%--------------------------------------
-%20190903 com_channel%\begin{theorem}[\hib{Theorem of Reversibility}] 
-%20190903 com_channel%\citepp{vantrees1}{289}{290}
-%20190903 com_channel%\label{thm:reversibility}
-%20190903 com_channel%%--------------------------------------
-%20190903 com_channel%Let
-%20190903 com_channel%\begin{liste}
-%20190903 com_channel%   \item $\est = \opR\opC\opT\vu$ be the optimum estimate of $\vu$
-%20190903 com_channel%   \item $\opX$ be an operator with right inverse $\opXi{X}$.
-%20190903 com_channel%\end{liste}
-%20190903 com_channel%Then there exists some $\opR'$ such that
-%20190903 com_channel%   \formbox{ \est = \opR'\opX\opC\opT\vu. }
-%20190903 com_channel%\end{theorem}
-%20190903 com_channel%\begin{proof}
-%20190903 com_channel%  Let $\opR'=\opR\opXi{X}$.
-%20190903 com_channel%  Then
-%20190903 com_channel%  \[ \opR'\opX\opC\opT\vu = \opR\opXi{X}\opC\opT\vu = \opR\opC\opT\vu = \est. \]
-%20190903 com_channel%\end{proof}
-
 %======================================
 \chapter{Narrowband Signals}
 %======================================
@@ -652,13 +315,17 @@ $\Fx:\R\to\C$
   see also \prefpp{thm:FTreal} \prefpo{thm:FTreal}
   }
 \thmbox{
-  \begin{array}{rcll}
-  \Fx(f)       &=& \Fx^\ast(-f)    & \text{ (hermitian symmetric )} \\
-  \Reb{\Fx(f)} &=& \Reb{\Fx(-f)}   & \text{ (symmetric           )} \\
-  \Imb{\Fx(f)} &=& -\Imb{\Fx(-f)}  & \text{ (anti-symmetric      )} \\
-  |\Fx(f)|     &=& |\Fx(-f)|       & \text{ (symmetric           )} \\
-  \angle\Fx(f) &=& -\angle\Fx(-f)  & \text{ (anti-symmetric      )}.
-  \end{array}
+  \brb{\begin{array}{M}
+    $\fx$ is \propb{real-valued}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrcllD}
+      (1). & \Fx(f)       &=& \Fx^\ast(-f)    & \text{ (hermitian symmetric )} & and 
+    \\(2). & \Reb{\Fx(f)} &=& \Reb{\Fx(-f)}   & \text{ (symmetric           )} & and 
+    \\(3). & \Imb{\Fx(f)} &=& -\Imb{\Fx(-f)}  & \text{ (anti-symmetric      )} & and 
+    \\(4). & \abs{\Fx(f)}     &=& |\Fx(-f)|       & \text{ (symmetric       )} & and
+    \\(5). & \angle\Fx(f) &=& -\angle\Fx(-f)  & \text{ (anti-symmetric      )} &
+  \end{array}}
   }
 \end{theorem}
 \begin{proof}
@@ -727,12 +394,12 @@ Then
    \Fx(f)
      &=& \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)\\
 \\
-  \flE{\fx(t)}
-     &\eqa&  \frac{1}{2}\flE{\fx_l(t)} \\
+  \opE{\fx(t)}
+     &\eqa&  \frac{1}{2}E{\fx_l(t)} \\
 \\
-   |\Fx(f)|^2
-     &=& \frac{1}{4} |\Fx_l( f-f_c)|^2 +
-         \frac{1}{4} |\Fx_l(-f-f_c)|^2
+   \abs{\Fx(f)}^2
+     &=& \frac{1}{4} \abs{\Fx_l( f-f_c)}^2 +
+         \frac{1}{4} \abs{\Fx_l(-f-f_c)}^2
          \\
 \\
    \angle\Fx(f)
@@ -743,81 +410,80 @@ Then
 \end{array}
 }
 \end{theorem}
-\begin{proof} \\
-
-\begin{eqnarray*}
-   \flE{\fx(t)}
-        &\eqd& \norm{\fx(t)}^2
-      \\&=&    \norm{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}^2
-      \\&=&    \norm{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct} + \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
-      \\&=&    \norm{ \frac{1}{2}\fx_l(t)e^{j2\pi f_ct} }^2
-          +    \norm{ \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
-          +    2\Reb{\inprod{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct}}{\frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct}}}
-      \\&=&    \frac{1}{4}\norm{ \fx_l(t) }^2
-          +    \frac{1}{4}\norm{ \fx_l(t) }^2
-          +    \frac{1}{2}\Reb{\inprod{\fx_l(t)e^{j2\pi f_ct}}{\fx_l^\ast(t)e^{-j2\pi f_ct}}}
-      \\&\eqa& \frac{1}{2}\norm{ \fx_l(t) }^2
-      \\&\eqd& \frac{1}{2}\flE{\fx_l(t)}
+\begin{proof}
+\begin{align*}
+   \opE{\fx(t)}
+        &\eqd \norm{\fx(t)}^2
+      \\&=    \norm{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}^2
+      \\&=    \norm{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct} + \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
+      \\&=    \norm{ \frac{1}{2}\fx_l(t)e^{j2\pi f_ct} }^2
+         +    \norm{ \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
+         +    2\Reb{\inprod{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct}}{\frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct}}}
+      \\&=    \frac{1}{4}\norm{ \fx_l(t) }^2
+         +    \frac{1}{4}\norm{ \fx_l(t) }^2
+         +    \frac{1}{2}\Reb{\inprod{\fx_l(t)e^{j2\pi f_ct}}{\fx_l^\ast(t)e^{-j2\pi f_ct}}}
+      \\&\eqa \frac{1}{2}\norm{ \fx_l(t) }^2
+      \\&\eqd \frac{1}{2}\opE{\fx_l(t)}
 \\ \\
    \Fx(f)
-        &\eqd& [\opFT{\fx(t)}](f)
-      \\&\eqd& \inprod{\fx(t)}{e^{j2\pi ft}}
-      \\&=   & \inprod{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}
-                            {e^{j2\pi ft}}
-      \\&=   & \inprod{\frac{1}{2}\left[ \fx_l(t)e^{j2\pi f_ct} + \fx_l^\ast(t)e^{-j2\pi f_ct}   \right]}
-                            {e^{j2\pi ft}}
-      \\&=   & \frac{1}{2} \inprod{\fx_l(t)     e^{ j2\pi f_ct}}{ e^{j2\pi ft}}
-             + \frac{1}{2} \inprod{\fx_l^\ast(t)e^{-j2\pi f_ct}}{ e^{j2\pi ft}}
-      \\&=&    \frac{1}{2} \int_t  \fx_l(t)e^{-j2\pi(f-f_c)t}  \; dt
-          +    \frac{1}{2} \left[ \int_t  \fx_l(t) e^{-j2\pi(- f-f_c)t} \; dt \right]^\ast
-      \\&=&    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(f-f_c)t}}
-          +    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(- f-f_c)t}}^\ast
-      \\&\eqd& \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)
+        &\eqd [\opFT{\fx(t)}](f)
+      \\&\eqd \inprod{\fx(t)}{e^{j2\pi ft}}
+      \\&=    \inprod{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}
+                           {e^{j2\pi ft}}
+      \\&=    \inprod{\frac{1}{2}\left[ \fx_l(t)e^{j2\pi f_ct} + \fx_l^\ast(t)e^{-j2\pi f_ct}   \right]}
+                           {e^{j2\pi ft}}
+      \\&=    \frac{1}{2} \inprod{\fx_l(t)     e^{ j2\pi f_ct}}{ e^{j2\pi ft}}
+            + \frac{1}{2} \inprod{\fx_l^\ast(t)e^{-j2\pi f_ct}}{ e^{j2\pi ft}}
+      \\&=    \frac{1}{2} \int_t  \fx_l(t)e^{-j2\pi(f-f_c)t}  \; dt
+         +    \frac{1}{2} \left[ \int_t  \fx_l(t) e^{-j2\pi(- f-f_c)t} \; dt \right]^\ast
+      \\&=    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(f-f_c)t}}
+         +    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(- f-f_c)t}}^\ast
+      \\&\eqd \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)
 \\ \\
    \Reb{\Fx(f)}
-     &=& \Reb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
-   \\&=& \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l^\ast(-f-f_c)}
-   \\&=& \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l(-f-f_c)}
+     &= \Reb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
+   \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l^\ast(-f-f_c)}
+   \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l(-f-f_c)}
 \\ \\
    \Imb{\Fx(f)}
-     &=& \Imb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
-   \\&=& \frac{1}{2}\Imb{\Fx_l(f-f_c)} + \frac{1}{2}\Imb{\Fx_l^\ast(-f-f_c)}
-   \\&=& \frac{1}{2}\Imb{\Fx_l(f-f_c)} - \frac{1}{2}\Imb{\Fx_l(-f-f_c)}
+     &= \Imb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
+   \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} + \frac{1}{2}\Imb{\Fx_l^\ast(-f-f_c)}
+   \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} - \frac{1}{2}\Imb{\Fx_l(-f-f_c)}
 \\ \\
    |\Fx(f)|^2
-     &=& \left| \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right|^2
-   \\&=& \frac{1}{4}
-         \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
-         \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]^\ast
-   \\&=& \frac{1}{4} \left[
-         \Fx_l     ( f-f_c) \Fx_l^\ast( f-f_c) +
-         \Fx_l     ( f-f_c) \Fx_l     (-f-f_c) +
-         \Fx_l^\ast(-f-f_c) \Fx_l^\ast( f-f_c) +
-         \Fx_l^\ast(-f-f_c) \Fx_l     (-f-f_c)
-         \right]
-   \\&=& \frac{1}{4} \left[
-         |\Fx_l( f-f_c)|^2 +
-         2\Reb{\Fx_l     ( f-f_c) \Fx_l     (-f-f_c)} +
-         |\Fx_l^\ast(-f-f_c)|^2
-         \right]
-   \\&=& \frac{1}{4} \left[
-         |\Fx_l( f-f_c)|^2 + |\Fx_l(-f-f_c)|^2 + 0
-         \right]
+     &= \left| \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right|^2
+   \\&= \frac{1}{4}
+        \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
+        \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]^\ast
+   \\&= \frac{1}{4} \left[
+        \Fx_l     ( f-f_c) \Fx_l^\ast( f-f_c) +
+        \Fx_l     ( f-f_c) \Fx_l     (-f-f_c) +
+        \Fx_l^\ast(-f-f_c) \Fx_l^\ast( f-f_c) +
+        \Fx_l^\ast(-f-f_c) \Fx_l     (-f-f_c)
+        \right]
+   \\&= \frac{1}{4} \left[
+        |\Fx_l( f-f_c)|^2 +
+        2\Reb{\Fx_l     ( f-f_c) \Fx_l     (-f-f_c)} +
+        |\Fx_l^\ast(-f-f_c)|^2
+        \right]
+   \\&= \frac{1}{4} \left[
+        |\Fx_l( f-f_c)|^2 + |\Fx_l(-f-f_c)|^2 + 0
+        \right]
 \\ \\
    \angle\Fx(f)
-     &=& \angle\left[ \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
-   \\&=& \angle\left[ \Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) \right]
-   \\&=& \atan\frac{\Imb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
-                   {\Reb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
-   \\&=& \atan\frac{\Imb{\Fx_l(f-f_c)} + \Imb{\Fx_l^\ast(-f-f_c) }}
-                   {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l^\ast(-f-f_c) }}
-   \\&=& \atan\frac{\Imb{\Fx_l(f-f_c)} - \Imb{\Fx_l(-f-f_c) }}
-                   {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l(-f-f_c) }}
-   \\&=& \left\{\begin{array}{rl}
-          \angle\Fx_l(f-f_c) &:f\eqa +f_c \\
-         -\angle\Fx_l(f+f_c) &:f\eqa -f_c
-         \end{array}\right.
-\end{eqnarray*}
+     &= \angle\left[ \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
+   \\&= \angle\left[ \Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) \right]
+   \\&= \atan\frac{\Imb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
+                  {\Reb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
+   \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} + \Imb{\Fx_l^\ast(-f-f_c) }}
+                  {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l^\ast(-f-f_c) }}
+   \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} - \Imb{\Fx_l(-f-f_c) }}
+                  {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l(-f-f_c) }}
+   \\&= \left\{\begin{array}{rl}
+         \angle\Fx_l(f-f_c) &:f\eqa +f_c \\
+        -\angle\Fx_l(f+f_c) &:f\eqa -f_c
+        \end{array}\right.
+\end{align*}
 \end{proof}
 
 
